Update configuration files and ensure render.yaml is properly committed

--- a/Desktop/ANTI AI/infra/docker-compose.yml
+++ b/Desktop/ANTI AI/infra/docker-compose.yml
@@ -138,8 +138,8 @@ services:
       - LANGUAGETOOL_URL=http://languagetool:8010
       - REDIS_URL=redis://redis:6379
       - SUPABASE_URL=${SUPABASE_URL}
-      - SUPABASE_SERVICE_ROLE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
-      - SUPABASE_ANON_KEY=${SUPABASE_ANON_KEY}
+      - SUPABASE_KEY=${SUPABASE_SERVICE_ROLE_KEY}
+      - SUPABASE_DB=${DB_URL}
       - JWT_SECRET=${JWT_SECRET}
       - OPENALEX_BASE_URL=https://api.openalex.org
       - UNPAYWALL_EMAIL=${UNPAYWALL_EMAIL}
